@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-28T00:38:04Z",
-  "count_outdated" : 479,
-  "uniques_outdated" : 308,
+  "timestamp" : "2024-01-28T08:09:39Z",
+  "count_outdated" : 480,
+  "uniques_outdated" : 309,
   "count" : 481,
   "uniques" : 310,
   "clones" : [
-    {
-      "timestamp": "2024-01-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-23T00:00:00Z",
       "count": 1,
